--- a/style.css
+++ b/style.css
@@ -56,6 +56,11 @@ p {
   margin: 50px 50px;
 }
 
+.btn-blue:hover {
+  background-color: #76abca;
+  color: white;
+}
+
 .list-inline {
   list-style: none;
   padding: 0;
@@ -87,6 +92,7 @@ p {
   /* For a screen < 960px, this CSS will be read */
   .card-white {
     width: 600px;
+    margin: 24px auto;
   }
 }
 
@@ -94,6 +100,7 @@ p {
   /* For a screen < 720px, this CSS will be read */
   .card-white {
     width: 500px;
+    margin: 24px auto;
   }
 }
 
@@ -101,6 +108,11 @@ p {
   /* For a screen < 720px, this CSS will be read */
   .card-white {
     width: 400px;
+    margin: 24px auto;
+  }
+  .container {
+    margin: 0;
+    width: 100%;
   }
 }
 
@@ -108,6 +120,11 @@ p {
   /* For a screen < 720px, this CSS will be read */
   .card-white {
     width: 300px;
+    margin: 24px auto;
+  }
+  .container {
+    margin: 0;
+    width: 100%;
   }
 }
 
